css/inkos.css
.input-email {
    background-color: transparent;
    border: 0px solid;
}

.input-email-book {
    background-color: transparent;
    border: 0px solid;
    text-align: center;
}

.mousse-over:hover {
    cursor: pointer;
}

.boutton-disable {
    pointer-events: none;
    opacity: 0.3;
}

.input-picker {
    background-color: transparent;
    border: 0px solid;
    text-align: center;
    color: #6165FF;
}

.flex-fill {
    flex: 1;
    width: 100%;
}

.hide {
    display: none;
}

.form-book {
    text-align: center;
}

.error-text {
    color: #910C21;
}

